[metadata]
name = audio-analysis-project
version = 1.0.0
authors = Kyla Harpe, Hannah Vutuan, Kelly Resetar
authors_email = kharpe3317@floridapoly.edu, hvutuan2514@floridapoly.edu, kresetar3571@floridapoly.edu
description = Audio Analysis Project
long_description = file: README.md
long_description_content_type = text/markdown
url = # https://github.com/hvutuan2514/audio-analysis-project
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
packages = find:
install_requires =
    librosa==0.10.1
    matplotlib==3.8.2
    numpy==1.26.0
    scipy==1.11.4